# deeplx

./: .gitignore  API.md  Cargo.toml  Dockerfile  README.md  build.sh
.github/workflows/: release.yml
src/: daemon.rs  lib.rs  main.rs  serve.rs
